# aioeagle

./: .gitignore  README.md  bla.py  data.txt  example.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: pythonpublish.yml  test.yml
aioeagle/: __init__.py  electric_meter.py  errors.py  hub.py  util.py
