[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "aioeagle"
version = "1.1.0"
license = "Apache-2.0"
description = "Python module to talk to Rainforest EAGLE-200."
readme = "README.md"
authors = [{ name = "Paulus Schoutsen", email = "paulus@paulusschoutsen.nl" }]
requires-python = ">=3.9"
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "aiohttp",
  "xmltodict",
]

[project.urls]
"Source code" = "https://github.com/home-assistant-libs/aioeagle"
